<resources xmlns:tools="http://schemas.android.com/tools">
    <string name="device_token">deviceId</string>
    <string name="email_digits">ABCDEFGHIJKLMNOPQRSTUVWXYZabcdefghijklmnopqrstuvwxyz0123456789_.@</string>
    <string name="font_medium">Roboto-Medium.ttf</string>
    <string name="skip_button">Skip</string>
    <string name="done_button">Done</string>
    <string name="joyride_page1_text1">Search</string>
    <string name="joyride_page1_text2">An easy way to find local businesses, services and products. Get only the most relevant results. No fluff.</string>
    <string name="joyride_page2_text1">Curated List</string>
    <string name="joyride_page2_text2">Create, maintain and share your own curated list of businesses. You can also browse other people’s curated lists.</string>
    <string name="joyride_page3_text1">Rate and Review</string>
    <string name="joyride_page3_text2">Share your thoughts on local businesses and services through ratings and reviews.</string>
    <string name="joyride_page4_text1">Shop</string>
    <string name="joyride_page4_text2">Buy products and services spanning across multiple categories and track them with ease.</string>
    <string name="enter_distance">Enter Distance</string>
    <string name="enter_time_interval">Enter time interval</string>
    <string name="set_priority">Set Priority</string>
    <string name="save_parameters">Save Parameters</string>
    <string name="sign_in">LOG IN</string>
    <string name="enter_your_email_hint">Enter your email</string>
    <string name="enter_your_email_username_hint">Enter your email/username</string>
    <string name="bruta_condensed_glb_bold">fonts/spartan/Spartan-Bold.ttf</string>
    <string name="bruta_normal_glb_semi_bold_italic">fonts/spartan/Spartan-Bold.ttf</string>
    <string name="bruta_condensed_glb_regular">fonts/spartan/Spartan-Regular.ttf</string>
    <string name="bruta_condensed_glb_semi_bold">fonts/spartan/Spartan-SemiBold.ttf</string>
    <string name="bruta_normal_glb_semi_bold">fonts/spartan/Spartan-SemiBold.ttf</string>
    <string name="bruta_normal_glb_regular">fonts/spartan/Spartan-Regular.ttf</string>
    <string name="bruta_normal_glb_light">fonts/spartan/Spartan-Light.ttf</string>
    <string name="eina_01_bold">fonts/spartan/Spartan-Bold.ttf</string>
    <string name="eina_01_regular">fonts/spartan/Spartan-Regular.ttf</string>
    <string name="eina_01_semibold">fonts/spartan/Spartan-SemiBold.ttf</string>
    <string name="arty_signature">fonts/spartan/Spartan-Light.ttf</string>
    <string name="sign_in_button_text">Log In</string>
    <string name="forgot_your_password">Forgot your password?</string>
    <string name="reset_password_message">To reset your password, please follow the instructions sent to your email</string>
    <string name="send">Send</string>
    <string name="password_reset_msg">Link to reset your password has been sent to your email.</string>
    <string name="email_empty_msg">Please enter an Email</string>
    <string name="email_valid_msg">Please enter a valid email</string>
    <string name="password_empty_msg">Please enter password</string>
    <string name="password_valid_msg">Password must be 6 digits or more</string>
    <string name="search">Search</string>
    <string name="favourite">Favourite</string>
    <string name="unfavourite">Unfavourite</string>
    <string name="leave">Leave</string>
    <string name="notes">Notes</string>
    <string name="create_room">CREATE SPACE</string>
    <string name="next">Next</string>
    <string name="placeholder_users_found">14 Users Found</string>
    <string name="no_users_found">No Users Found</string>
    <string name="add_users">Invite people to your space</string>
    <string name="create_room_small">Create Space</string>
    <string name="add">Add</string>
    <string name="privacy_title">Privacy</string>
    <string name="privacy_desc">Select space privacy</string>
    <string name="private_title">Private</string>
    <string name="private_desc">Make this space invite only</string>
    <string name="public_title">Public</string>
    <string name="public_desc">Space visible to everyone</string>
    <string name="hidden_title">Hidden</string>
    <string name="hidden_desc">Space only visible to members</string>
    <string name="memebers_can_post_title">Only admins can post</string>
    <string name="memebers_can_post_desc">Other members can only like\nand comment on your posts</string>
    <string name="tags_title">Tags</string>
    <string name="tags_desc">Add multiple #tags</string>
    <string name="hash_prefix">#</string>
    <string name="at_prefix">@</string>
    <string name="please_select_room_type">Please select space type</string>
    <string name="capture_camera_text">Hold for video, tap for photo</string>
    <string name="mime_gif">image/gif</string>
    <string name="gif_extension">.gif</string>
    <string name="turtle_folder">Turtle</string>
    <string name="use">Use</string>
    <string name="global_campus_title">Global / Campus</string>
    <string name="global_campus_desc">Toggle for Global or Campus</string>
    <string name="tag_error_add_hash">Please add # before the tag</string>
    <string name="tag_error_add_tag">Please add tag after the #</string>
    <string name="tag_error_empty">Please enter a tag</string>
    <string name="loading">loading</string>
    <string name="cre_by">Space created by\u0020</string>
    <string name="on">\u0020on\u0020</string>
    <string name="percent">%</string>
    <string name="on_a">ON</string>
    <string name="common_err_msg">Something went wrong</string>
    <string name="no_internet_msg">Please check your connectivity</string>
    <string name="txt_ask_qtn">Ask a question…</string>
    <string name="txt_add_opt">Add a choice</string>
    <string name="txt_add_tag">Add Tags</string>
    <string name="txt_hnt_opt">Choice\u0020</string>
    <string name="hash">#</string>
    <string name="space">\u0020</string>
    <string name="meetup_creator_placeholder">&#160;wants to…</string>
    <string name="placeholder_meetup_title">Meetup Title</string>
    <string name="placeholder_duration">Duration</string>
    <string name="meetup_location_prefix">at&#160;</string>
    <string name="placeholder_location">Location</string>
    <string name="create_meetup">CREATE MEETUP</string>
    <string name="edit_meetup">EDIT MEETUP</string>
    <string name="post">Post</string>
    <string name="at_symbol">\@</string>
    <string name="invalid_time_error">Please select a time in the future</string>
    <string name="set">Set</string>
    <string name="cancel">Cancel</string>
    <string name="create_post">CREATE POST</string>
    <string name="edit_post">Edit Post</string>
    <string name="textpost_hint">Start typing</string>
    <string name="wants_to">&#160;wants to &#8230; &#160;</string>
    <string name="wants_to_meetUp">Wants to </string>
    <string name="character_remaining">%d character remaining</string>
    <string name="character_remaining_half_string">%d character remaining</string>
    <string name="characters_remaining">%d characters remaining</string>
    <string name="characters_remaining_half_string">%d characters remaining</string>
    <string name="characters_remaining1">%s characters remaining</string>
    <string name="characters_max">%d characters max</string>
    <string name="interested">INTERESTED</string>
    <string name="attending">ATTENDING</string>
    <string name="add_caption">Add Caption…</string>
    <string name="add_friends">ADD FRIENDS</string>
    <string name="search_people_hint">Search name, username</string>
    <string name="add_caption_header">ADD CAPTION</string>
    <string name="edit_caption_header">EDIT CAPTION</string>
    <string name="room_creation_msg">Space created successfully</string>
    <string name="type_message">Type Message</string>
    <string name="liked_by">LIKED BY</string>
    <string name="meetup">Meetups</string>
    <string name="meetupcap">MEETUPS</string>
    <string name="leave_room">Leave Space</string>
    <string name="members">Space Members</string>
    <string name="Members">Members</string>
    <string name="edit_room">Edit Space</string>
    <string name="invitation_sent">Invitation sent</string>
    <string name="profile">Profile</string>
    <string name="of">&#160;of&#160;</string>
    <string name="contacts">Contacts</string>
    <string name="yes">Yes</string>
    <string name="no_alert">No</string>
    <string name="is_now_admin">&#160;is now Admin of this space</string>
    <string name="txt_btn_sgn">Sign up</string>
    <string name="txt_sgn_in">Log in</string>
    <string name="txt_tut_1">exclusively for college students</string>
    <string name="txt_tut_2">TBD</string>
    <string name="txt_tut_3">start &amp; explore spaces\ncampus or global\nfrom shower thoughts
to study groups</string>
    <string name="txt_tut_4">featured spaces\nwill make your life easier \nbuy &amp; sell class notes
find local jobs
rideshare
&amp; more…</string>
    <string name="txt_tut_5">meet students\nfrom campuses\n
around the country\nby interests • hometown\n
courses • skills\n
dorm • greek life </string>
    <string name="txt_signUp_ttl">Sign Up</string>
    <string name="txt_signUp_nxt">Next</string>
    <string name="txt_signUp_wlc">Welcome to Vibe.\nPlease sign up to continue</string>
    <string name="txt_signUp_tnc">By signing up, you agree to our <u>Terms</u> \u0026\n<u>Privacy Policy</u></string>
    <string name="txt_fn_hnt">Enter your first name</string>
    <string name="txt_ln_hnt">Enter your last name</string>
    <string name="txt_ea_hnt">Enter your email address</string>
    <string name="txt_un">, what username would you like?</string>
    <string name="txt_unm_ttl">Username</string>
    <string name="txt_un_hnt">Enter your username</string>
    <string name="txt_pwd_hnt">password</string>
    <string name="txt_rpw_hnt">Re-Type Password</string>
    <string name="txt_wry_un">Don’t worry, you can change your username later if you want to.</string>
    <string name="txt_vrf_hdr">We’re almost there, just\nenter the code we sent you\nvia email in the box below</string>
    <string name="txt_vrf_ttl">Verify</string>
    <string name="txt_vfy_un">To ensure that you are who you say you are, you will receive a 4 digit code via email.</string>
    <string name="txt_vrf_nr">Not received an email? <u><b>Re-Send</b></u></string>
    <string name="txt_cpf_mjr_1">Congrats\u0020</string>
    <string name="txt_cpf_mjr_2">\u0020\nyou’ve successfully\n</string>
    <string name="txt_cpf_mjr_3">verified your\nregistration.</string>
    <string name="txt_cpf_mnr">Please continue to personalise\nyour experience.</string>
    <string name="txt_cyp">Complete your profile</string>
    <string name="txt_ca_ttl">Avatar</string>
    <string name="txt_avatar_lbl">You can use one of our default avatars, or upload an image of your own.</string>
    <string name="done">Done</string>
    <string name="crop_amp_resize">POSITION IMAGE</string>
    <string name="remove_this_user">Remove from Space</string>
    <string name="profile_2_header">, Just a few more questions.</string>
    <string name="privacy">Privacy</string>
    <string name="write_review">Write a Review</string>
    <string name="skip_review">Skip Review</string>
    <string name="delete">Delete</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="routing_number">Routing Number</string>
    <string name="account_number">Account Number</string>
    <string name="confirm_account_number">Confirm Account Number</string>
    <string name="review_bottom_head">Thank you! Your notes will be \nsent to your email.</string>
    <string name="edit">Edit</string>
    <string name="enter_your_routing_number">Enter your routing number</string>
    <string name="enter_account_number">Enter your account number</string>
</resources>