<?xml version="1.0" encoding="utf-8"?><!--
  ~ /*
  ~   Copyright © 2017 Noise. All rights reserved.
  ~   Created by Appster.
  ~  */
  -->

<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/margin_16">


    <EditText
        android:id="@+id/et_distance"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim64"
        android:inputType="number"
        android:hint="@string/enter_distance" />


    <EditText
        android:id="@+id/et_time"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim64"
        android:layout_below="@+id/et_distance"
        android:layout_marginTop="@dimen/margin_8"
        android:inputType="number"
        android:hint="@string/enter_time_interval" />


    <TextView
        android:id="@+id/tv_priority"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/et_time"
        android:layout_marginTop="@dimen/margin_8"
        android:hint="@string/set_priority" />

    <Spinner
        android:id="@+id/spinner_priority"
        android:layout_width="fill_parent"
        android:layout_height="@dimen/dim64"

        android:layout_below="@+id/tv_priority" />


    <Button
        android:id="@+id/btn_save"
        android:layout_width="match_parent"
        android:layout_height="@dimen/dim64"
        android:layout_alignParentBottom="true"
        android:text="@string/save_parameters" />

</RelativeLayout>